# game

./: .gitignore  CLAUDE.md  CMakeLists.txt  debug  imgui.ini  run
assets/textures/: .ork_world_tileset.png-autosave.kra
src/: main.cpp
src/components/: abilities.h  componentGroups.h  components.h  entity.h
src/ecs/: entity.h  world.h
src/entities/: enemy.h  player.h  projectile.h  space_marine.h
src/lib/: osScaling.cpp  osScaling.h  utils.h
src/resources/: textureManager.h
src/shared/: compnents-old.h  componentGroups.h  componentRegistry.h  components.h  entity.h  message.h  protocol.h  snapshot.h  tcp.h
src/systems/: animation.h  collision.h  input.h  lifeTime.h  physics.h  renderer.h
src/tools/: main.cpp
